overflow issues on iphone

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,6 +10,7 @@
 
 * {
   font-family: 'Share', cursive;
+  overflow-x: hidden;
 p{
   font-weight: lighter;
 }
